update privacy (https://github.com/DataSeer/dataseer-web/issues/91#issuecomment-776032449, https://github.com/DataSeer/dataseer-web/issues/91#issuecomment-776047977)

--- a/views/privacy.pug
+++ b/views/privacy.pug
@@ -30,10 +30,13 @@ block content
               li How to contact the appropriate authorities
               li What data do we collect?
 
-            h3 Dataseer Web collects the following data:
+            h3 What data do we collect?
 
-            p Personal identification information: email address, hashed password (and your organization).
-            p Research text metadata & file.
+            p Dataseer Web collects the following data:
+
+            ul
+              li Personal identification information: email address, hashed password (and your organization).
+              li Research text metadata & file.
 
             h3 How do we collect your data?
 
@@ -52,16 +55,12 @@ block content
               li Manage your account.
               li Email you with special offers on other products and services we think you might like.
               li <a href="https://dataseer.ai/how-it-works/">Process</a> your research text.
-              li Dataseer Web will share your data with our partner companies so that they may offer you their products and services.
-                ul
-                  li [List organizations that will receive data]
 
+            p The only company with full access to the data is DataSeer Research Data Services Ltd.
 
             h3 How do we store your data?
             
-            p Dataseer Web securely stores your data in an encrypted database on [SERVER LOCATION].
-
-            p Dataseer Web will keep your data for [enter time period]. Once this time period has expired, we will delete your data by deleting your account and all documents uploaded.
+            p Dataseer Web securely stores your data in encrypted servers hosted by Linode, LLC located in Atlanta, Georgia, USA.
 
             h3 Marketing
 
@@ -84,15 +83,11 @@ block content
 
               li The right to data portability – You have the right to request that Dataseer Web transfer the data that we have collected to another organization, or directly to you, under certain conditions.
 
-            p If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please contact us at our email:
-
-            p Call us at: 
-
-            p Or write to us:
+            p If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please contact us at our email: info@dataseer.ai
 
             h3 Cookies
 
-            p Cookies are text files placed on your computer to collect standard Internet log information and visitor behavior information. When you visit our websites, we may collect information from you automatically through cookies or similar technology
+            p Cookies are text files placed on your computer to collect standard Internet log information and visitor behavior information. When you visit our websites, we may collect information from you automatically through cookies or similar technology.
 
             p For further information, visit allaboutcookies.org.
 
@@ -101,8 +96,8 @@ block content
             p Dataseer Web uses cookies in a range of ways to improve your experience on our website, including:
 
             ul
-              li Keeping you signed in
-              li Understanding how you use our website
+              li Keeping you signed in.
+              li Understanding how you use our website.
 
             h3 What types of cookies do we use?
 
@@ -128,9 +123,4 @@ block content
 
             p If you have any questions about Dataseer Web’s privacy policy, the data we hold on you, or you would like to exercise one of your data protection rights, please do not hesitate to contact us.
 
-            p Email us at:
-
-            p Call us:
-
-            p Or write to us at:
-
+            p Email us at: info@dataseer.ai
