--- a/views/settings.pug
+++ b/views/settings.pug
@@ -12,8 +12,10 @@ block content
                 <td style='padding-right: 40px;'><b>Username</b>: #{current_user.username} </td>
                 <td style='padding-right: 20px;'><b>Role</b>:  #{current_user.role.label} </td>
                 <td style='padding-left: 20px;'><b>Organization</b>: #{current_user.organisation}</td>
+                <td style='padding-left: 20px;'><b>token</b>: <button id="copyApiToken" class="button blue btn btn-sm btn-primary waves-effect waves-light" title=#{current_user.apiToken}>Copy to clipboard</button></td>
               </tr>
             </table>
+            input.form-control.hidden(type='text' id='apiToken' name='apiToken' value=current_user.apiToken)
           div(class='col-12' style='text-align: center;top: 20px;')
             h2 Update password
         div(class='row')
@@ -29,3 +31,5 @@ block content
                 input.form-control(type='password', name='new_password', placeholder='new password')
               .btn-group
                 button.blue.btn.btn-primary.waves-effect.waves-light(type='submit') update password
+
+  script(src=root + 'javascripts/settings.js')
