fix : settings tpl, admin.js script & ressetPassword style

--- a/views/resetPassword.pug
+++ b/views/resetPassword.pug
@@ -5,7 +5,7 @@ block content
   div(class='container-fluid')
     div(class='row')
       div(class='col-12' style='background-color:#FFFFFF; border:1px solid #184D7E; border-radius: 20px; ')
-        div(class='row')
+        div(class='row' style="margin-top:20px;")
           div(class='col-12' style='text-align: center;')
             h2 Reset password
         div(class='row')
