--- a/views/backoffice/organisations.pug
+++ b/views/backoffice/organisations.pug
@@ -19,7 +19,7 @@ block content
             div(class='col-12 text-center' style='margin-top:10px;')
               form#new-organisation(role='form', action=root + route,method='post')
                 input(type='text' name='name' placeholder='Name of new organization')
-                button.btn.btn-default.waves-effect.waves-light(type='submit' name='create') Add
+                button.blue.btn.btn-primary.waves-effect.waves-light(type='submit' name='create') Add
   
   div(class='container-fluid')
     div(class='row')
@@ -34,7 +34,7 @@ block content
                 div limit: 
                   input(type='text' name='limit' placeholder='Maximum number of results')
                 div
-                  button.btn.btn-default.waves-effect.waves-light(type='submit') Search for organizations
+                  button.blue.btn.btn-primary.waves-effect.waves-light(type='submit') Search for organizations
           div(class='row')
             div(class='col-12 text-center')
               div(class='header') Organizations
@@ -67,7 +67,7 @@ block content
                       input.form-control(type='text' class='hidden' name='_id' value=organisation._id)
                       input.form-control(type='text' name='name' value=organisation.name)
                     div(class='col-3')
-                      button.btn.btn-default.waves-effect.waves-light(type='submit' name='update') Update
+                      button.blue.btn.btn-primary.waves-effect.waves-light(type='submit' name='update') Update
                       button.btn.btn-danger.waves-effect.waves-light(type='submit' name='delete') Delete
 
           div(class='row')
