--- a/views/documents/all.pug
+++ b/views/documents/all.pug
@@ -25,7 +25,7 @@ block content
                 div limit: 
                   input(type='text' name='limit' placeholder='Maximum number of results')
                 div
-                  button.btn.btn-default.waves-effect.waves-light(type='submit') Search for documents
+                  button.btn.btn-primary.waves-effect.waves-light(type='submit') Search for documents
           div(class='row')
             div(class='col-12 text-center')
               div(class='header')  All documents
@@ -47,8 +47,8 @@ block content
                     div(class='col-1') Url
                     div(class='col-1') Date uploaded
                     div(class='col-1') Status
-                    div(class='col-2') Modified by
-                    div(class='col-1') Organization
+                    div(class='col-2') Modified By
+                    div(class='col-1') Organisation
                     div(class='col-2') Journal
                     div(class='col-3') Title
                     div(class='col-1') Actions
@@ -56,7 +56,7 @@ block content
                     div(class='col-1') Url
                     div(class='col-1') Date uploaded
                     div(class='col-2') Status
-                    div(class='col-2') Modified by
+                    div(class='col-2') Modified By
                     div(class='col-2') Journal
                     div(class='col-4') Title
             each document, index in documents
@@ -66,11 +66,13 @@ block content
                     div(class='form-row')
                       if current_user.role.label === 'curator'
                         div(class='col-1')
-                          div(class="hidden") #{document.metadata.manuscriptId} #{document.doi} #{document.pmid}
-                          if (typeof document.metadata.manuscriptId !== "undefined" && document.metadata.manuscriptId !== "")
-                            a.document-link(href=root + 'documents/' + document._id) #{document.metadata.manuscriptId}
-                          else if (typeof document.pdf !== "undefined" && typeof document.pdf.filename !== "undefined" && document.pdf.filename !== "")
+                          div(class="hidden") #{JSON.stringify(document.metadata)}
+                          if (document.metadata.manuscript_id !== "")
+                            a.document-link(href=root + 'documents/' + document._id) #{document.metadata.manuscript_id}
+                          else if (document.pdf !== "")
                             a.document-link(href=root + 'documents/' + document._id) #{document.pdf.filename}
+                          else if (document.tei !== "")
+                            a.document-link(href=root + 'documents/' + document._id) #{document.tei.filename}
                           else
                             a.document-link(href=root + 'documents/' + document._id) #{formatUrl(document._id)}
                           input.form-control(type='text' name='id' class='hidden' value=document._id)
@@ -83,27 +85,30 @@ block content
                           div(class='col-1') Process finished
                         div(class='col-2')
                           ul.modifiers
-                            each role, i in document.modifiedBy
-                              each user, j in role
-                                li.item #{user} (#{i})
+                            each log, i in document.logs
+                              li.item #{log.action} (#{log.user.username})
                         div(class='col-1')
                           select.custom-select(name='organisation')
-                            if document.organisation === ''
-                              option(selected value='') None
-                            else
-                              option(value='') None
                             each organisation, index in organisations
-                              if document.organisation === organisation.name
-                                option(selected value=organisation.name) #{organisation.name}
+                              if document.organisation.name === organisation.name
+                                option(selected value=organisation._id) #{organisation.name}
                               else
-                                option(value=organisation.name) #{organisation.name}
+                                option(value=organisation._id) #{organisation.name}
                         div(class='col-2') #{document.metadata.journal}
-                        div(class='col-3') #{document.metadata.articleTitle}
+                        div(class='col-3') #{document.metadata.article_title}
                         div(class='col-1')
-                          button.btn.btn-default.waves-effect.waves-light(type='submit' name='update') Update
+                          button.btn.btn-primary.waves-effect.waves-light(type='submit' name='update') Update
                       else
                         div(class='col-1')
-                          a.document-link(href=root + 'documents/' + document._id) #{document._id}
+                          div(class="hidden") #{JSON.stringify(document.metadata)}
+                          if (document.metadata.manuscript_id !== "")
+                            a.document-link(href=root + 'documents/' + document._id) #{document.metadata.manuscript_id}
+                          else if (document.pdf !== "")
+                            a.document-link(href=root + 'documents/' + document._id) #{document.pdf.filename}
+                          else if (document.tei !== "")
+                            a.document-link(href=root + 'documents/' + document._id) #{document.tei.filename}
+                          else
+                            a.document-link(href=root + 'documents/' + document._id) #{formatUrl(document._id)}
                           input.form-control(type='text' name='id' class='hidden' value=document._id)
                         div(class='col-1') #{formatDate(document.uploaded_at)}
                         if document.status === 'metadata'
@@ -114,11 +119,10 @@ block content
                           div(class='col-2') Process finished
                         div(class='col-2')
                           ul.modifiers
-                            each role, i in document.modifiedBy
-                              each user, j in role
-                                li.item #{user} (#{i})
+                            each log, i in document.logs
+                              li.item #{log.user.username} (#{log.action})
                         div(class='col-2') #{document.metadata.journal}
-                        div(class='col-4') #{document.metadata.articleTitle}
+                        div(class='col-4') #{document.metadata.article_title}
 
           div(class='row')
             div(class='col-12' style='margin-top:20px;')
