--- a/views/modals/help.pug
+++ b/views/modals/help.pug
@@ -7,4 +7,4 @@ div(class='modal fade' id='theHelp' role='dialog')
         div(class='modal-body')
           p We just need to write some help.
         div(class='modal-footer')
-          button(type='button' class='btn btn-default' data-dismiss='modal') Close
+          button.blue.btn.btn-default.waves-effect.waves-light(type='button' data-dismiss='modal') Close
