--- a/views/modals/quit.pug
+++ b/views/modals/quit.pug
@@ -5,13 +5,13 @@ div(class='modal fade' id='quit-modal' tabindex='-1' role='dialog' aria-labelled
       div(class='modal-header')
         h5(class='modal-title' id='quit-modal-lg')
           Datasets no saved !
-        button(type='button' class='close' data-dismiss='modal' aria-label='Close') x
+        button.blue.btn.waves-effect.waves-light(type='button' class='close' data-dismiss='modal' aria-label='Close') x
       div(class='modal-body')
         You did not save your changes... They will be lost if you do not save them before leaving the application
       div(class='modal-footer')
-        button(type='button' class='btn btn-secondary' data-dismiss='modal')
+        button.blue.btn.btn-secondary.waves-effect.waves-light(type='button' class='btn btn-secondary' data-dismiss='modal')
           Close
-        button(type='button' class='btn btn-primary' id='save-changes')
+        button.blue.btn.btn-primary.waves-effect.waves-light(type='button' class='btn btn-primary' id='save-changes')
           Save changes
 
 
