--- a/views/resetPassword.pug
+++ b/views/resetPassword.pug
@@ -21,10 +21,10 @@ block content
                 else
                   input.form-control(type='email', name='username', placeholder='mail address' value='')
               .form-group
-                if token
-                  input.form-control(type='text', name='token', placeholder='token' value=`${token}`)
+                if resetPasswordToken
+                  input.form-control(type='text', name='resetPasswordToken', placeholder='resetPasswordToken' value=`${resetPasswordToken}`)
                 else
-                  input.form-control(type='text', name='token', placeholder='token' value='')
+                  input.form-control(type='text', name='resetPasswordToken', placeholder='resetPasswordToken' value='')
               .form-group
                   input.form-control(type='password', name='password', placeholder='New password')
               .btn-group
