--- a/views/settings.pug
+++ b/views/settings.pug
@@ -11,12 +11,12 @@ block content
               <tr>
                 <td style='padding-right: 40px;'><b>Username</b>: #{current_user.username} </td>
                 <td style='padding-right: 20px;'><b>Role</b>:  #{current_user.role.label} </td>
-                <td style='padding-left: 20px;'><b>Organization</b>: #{current_user.organisation}</td>
-                if (current_user.apiToken) 
-                  <td style='padding-left: 20px;'><b>token</b>: <button id="copyApiToken" class="button blue btn btn-sm btn-primary waves-effect waves-light" title=#{current_user.apiToken}>Copy to clipboard</button></td>
+                <td style='padding-left: 20px;'><b>Organization</b>: #{current_user.organisation.name}</td>
+                if (current_user.tokens && current_user.tokens.api) 
+                  <td style='padding-left: 20px;'><b>token</b>: <button id="copyApiToken" class="button blue btn btn-sm btn-primary waves-effect waves-light" title=#{current_user.tokens.api}>Copy to clipboard</button></td>
+                  input.form-control.hidden(type='text' id='apiToken' name='apiToken' value=current_user.tokens.api)
               </tr>
             </table>
-            input.form-control.hidden(type='text' id='apiToken' name='apiToken' value=current_user.apiToken)
           div(class='col-12' style='text-align: center;top: 20px;')
             h2 Update password
         div(class='row')
@@ -31,7 +31,7 @@ block content
               .form-group
                 input.form-control(type='password', name='new_password', placeholder='new password')
               .btn-group
-                button.blue.btn.btn-primary.waves-effect.waves-light(type='submit') update password
+                button.blue.btn.btn-primary.waves-effect.waves-light(type='submit') Update password
 
-  if (current_user.apiToken)
+  if (current_user.tokens && current_user.tokens.api) 
     script(src=root + 'javascripts/settings.js')
