--- a/public/stylesheets/process/datasets.css
+++ b/public/stylesheets/process/datasets.css
@@ -607,7 +607,7 @@ i {
   margin-right: 25px;
 }
 
-#previous_step {
+#back_to_metadata {
   margin-right: 1%;
   display: inline-block;
   flex: 1;
