--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -6,7 +6,7 @@ block content
     div
       div(id='user-lg' style='position:absolute; top:4px; right:10px; text-align:right;')
         if current_user && !useDocumentToken
-          label(style='font-size:small;') Connected as: <b>#{current_user.username}</b> (#{current_user.role.label})
+          label(style='font-size:small;') Connected as: <b>#{current_user.username}</b> (#{current_user.role.label}, #{current_user.organisation.name})
         else
           label(style='font-size:small;') 
             a(href=root + 'signup') Sign up 
@@ -16,7 +16,7 @@ block content
       div(id='navbar-lg')
         ul(style='padding-left: 15px;')
           li
-            img(src='../img/DataSeer-logo-min.png' width='25')
+            img(src=root + 'img/DataSeer-logo-min.png' width='25')
           
           if current_user && !useDocumentToken
             li
