--- a/views/documents/all.pug
+++ b/views/documents/all.pug
@@ -60,69 +60,70 @@ block content
                     div(class='col-2') Journal
                     div(class='col-4') Title
             each document, index in documents
-              div(class='row' style='margin-right:10px; margin-left:10px;' data='true')
-                div(class='col-12')
-                  form.accounts(role='form', action=root + route, method='post')
-                    div(class='form-row')
-                      if current_user.role.label === 'curator'
-                        div(class='col-1')
-                          div(class="hidden") #{JSON.stringify(document.metadata)}
-                          if (document.metadata.manuscript_id !== "")
-                            a.document-link(href=root + 'documents/' + document._id) #{document.metadata.manuscript_id}
-                          else if (document.pdf !== "")
-                            a.document-link(href=root + 'documents/' + document._id) #{document.pdf.filename}
-                          else if (document.tei !== "")
-                            a.document-link(href=root + 'documents/' + document._id) #{document.tei.filename}
-                          else
-                            a.document-link(href=root + 'documents/' + document._id) #{formatUrl(document._id)}
-                          input.form-control(type='text' name='id' class='hidden' value=document._id)
-                        div(class='col-1') #{formatDate(document.uploaded_at)}
-                        if document.status === 'metadata'
-                          div(class='col-1') Metadata validation
-                        else if document.status === 'datasets'
-                          div(class='col-1') Datasets validation
-                        else if document.status === 'finish'
-                          div(class='col-1') Process finished
-                        div(class='col-2')
-                          ul.modifiers
-                            each log, i in document.logs
-                              li.item #{log.action} (#{log.user.username})
-                        div(class='col-1')
-                          select.custom-select(name='organisation')
-                            each organisation, index in organisations
-                              if document.organisation.name === organisation.name
-                                option(selected value=organisation._id) #{organisation.name}
-                              else
-                                option(value=organisation._id) #{organisation.name}
-                        div(class='col-2') #{document.metadata.journal}
-                        div(class='col-3') #{document.metadata.article_title}
-                        div(class='col-1')
-                          button.btn.btn-primary.waves-effect.waves-light(type='submit' name='update') Update
-                      else
-                        div(class='col-1')
-                          div(class="hidden") #{JSON.stringify(document.metadata)}
-                          if (document.metadata.manuscript_id !== "")
-                            a.document-link(href=root + 'documents/' + document._id) #{document.metadata.manuscript_id}
-                          else if (document.pdf !== "")
-                            a.document-link(href=root + 'documents/' + document._id) #{document.pdf.filename}
-                          else if (document.tei !== "")
-                            a.document-link(href=root + 'documents/' + document._id) #{document.tei.filename}
-                          else
-                            a.document-link(href=root + 'documents/' + document._id) #{formatUrl(document._id)}
-                          input.form-control(type='text' name='id' class='hidden' value=document._id)
-                        div(class='col-1') #{formatDate(document.uploaded_at)}
-                        if document.status === 'metadata'
-                          div(class='col-2') Metadata validation
-                        else if document.status === 'datasets'
-                          div(class='col-2') Datasets validation
-                        else if document.status === 'finish'
-                          div(class='col-2') Process finished
-                        div(class='col-2')
-                          ul.modifiers
-                            each log, i in document.logs
-                              li.item #{log.user.username} (#{log.action})
-                        div(class='col-2') #{document.metadata.journal}
-                        div(class='col-4') #{document.metadata.article_title}
+              if (document.metadata)
+                div(class='row' style='margin-right:10px; margin-left:10px;' data='true')
+                  div(class='col-12')
+                    form.accounts(role='form', action=root + route, method='post')
+                      div(class='form-row')
+                        if current_user.role.label === 'curator'
+                          div(class='col-1')
+                            div(class="hidden") #{JSON.stringify(document.metadata)}
+                            if (document.metadata.manuscript_id !== "")
+                              a.document-link(href=root + 'documents/' + document._id) #{document.metadata.manuscript_id}
+                            else if (document.pdf !== "")
+                              a.document-link(href=root + 'documents/' + document._id) #{document.pdf.filename}
+                            else if (document.tei !== "")
+                              a.document-link(href=root + 'documents/' + document._id) #{document.tei.filename}
+                            else
+                              a.document-link(href=root + 'documents/' + document._id) #{formatUrl(document._id)}
+                            input.form-control(type='text' name='id' class='hidden' value=document._id)
+                          div(class='col-1') #{formatDate(document.uploaded_at)}
+                          if document.status === 'metadata'
+                            div(class='col-1') Metadata validation
+                          else if document.status === 'datasets'
+                            div(class='col-1') Datasets validation
+                          else if document.status === 'finish'
+                            div(class='col-1') Process finished
+                          div(class='col-2')
+                            ul.modifiers
+                              each log, i in document.logs
+                                li.item #{log.action} (#{log.user.username})
+                          div(class='col-1')
+                            select.custom-select(name='organisation')
+                              each organisation, index in organisations
+                                if document.organisation.name === organisation.name
+                                  option(selected value=organisation._id) #{organisation.name}
+                                else
+                                  option(value=organisation._id) #{organisation.name}
+                          div(class='col-2') #{document.metadata.journal}
+                          div(class='col-3') #{document.metadata.article_title}
+                          div(class='col-1')
+                            button.btn.btn-primary.waves-effect.waves-light(type='submit' name='update') Update
+                        else
+                          div(class='col-1')
+                            div(class="hidden") #{JSON.stringify(document.metadata)}
+                            if (document.metadata.manuscript_id !== "")
+                              a.document-link(href=root + 'documents/' + document._id) #{document.metadata.manuscript_id}
+                            else if (document.pdf !== "")
+                              a.document-link(href=root + 'documents/' + document._id) #{document.pdf.filename}
+                            else if (document.tei !== "")
+                              a.document-link(href=root + 'documents/' + document._id) #{document.tei.filename}
+                            else
+                              a.document-link(href=root + 'documents/' + document._id) #{formatUrl(document._id)}
+                            input.form-control(type='text' name='id' class='hidden' value=document._id)
+                          div(class='col-1') #{formatDate(document.uploaded_at)}
+                          if document.status === 'metadata'
+                            div(class='col-2') Metadata validation
+                          else if document.status === 'datasets'
+                            div(class='col-2') Datasets validation
+                          else if document.status === 'finish'
+                            div(class='col-2') Process finished
+                          div(class='col-2')
+                            ul.modifiers
+                              each log, i in document.logs
+                                li.item #{log.user.username} (#{log.action})
+                          div(class='col-2') #{document.metadata.journal}
+                          div(class='col-4') #{document.metadata.article_title}
 
           div(class='row')
             div(class='col-12' style='margin-top:20px;')
