--- a/views/myDocuments.pug
+++ b/views/myDocuments.pug
@@ -30,26 +30,27 @@ block content
                 div(class='header') No data
           else
             each document, index in documents
-              div(class='row' style='margin-right:10px; margin-left:10px;' data='true')
-                div(class='col-2')
-                  div(class="hidden") #{JSON.stringify(document.metadata)}
-                  if (document.metadata.manuscript_id !== "")
-                    a.document-link(href=root + 'documents/' + document._id) #{document.metadata.manuscript_id}
-                  else if (document.pdf !== "")
-                    a.document-link(href=root + 'documents/' + document._id) #{document.pdf.filename}
-                  else if (document.tei !== "")
-                    a.document-link(href=root + 'documents/' + document._id) #{document.tei.filename}
-                  else
-                    a.document-link(href=root + 'documents/' + document._id) #{formatUrl(document._id)}
-                div(class='col-2') #{formatDate(document.uploaded_at)}
-                if document.status === 'metadata'
-                  div(class='col-3') Metadata validation
-                else if document.status === 'datasets'
-                  div(class='col-3') Datasets validation
-                else if document.status === 'finish'
-                  div(class='col-3') Process finished
-                div(class='col-2') #{document.metadata.journal}
-                div(class='col-3') #{document.metadata.article_title}
+              if (document.metadata)
+                div(class='row' style='margin-right:10px; margin-left:10px;' data='true')
+                  div(class='col-2')
+                    div(class="hidden") #{JSON.stringify(document.metadata)}
+                    if (document.metadata.manuscript_id !== "")
+                      a.document-link(href=root + 'documents/' + document._id) #{document.metadata.manuscript_id}
+                    else if (document.pdf !== "")
+                      a.document-link(href=root + 'documents/' + document._id) #{document.pdf.filename}
+                    else if (document.tei !== "")
+                      a.document-link(href=root + 'documents/' + document._id) #{document.tei.filename}
+                    else
+                      a.document-link(href=root + 'documents/' + document._id) #{formatUrl(document._id)}
+                  div(class='col-2') #{formatDate(document.uploaded_at)}
+                  if document.status === 'metadata'
+                    div(class='col-3') Metadata validation
+                  else if document.status === 'datasets'
+                    div(class='col-3') Datasets validation
+                  else if document.status === 'finish'
+                    div(class='col-3') Process finished
+                  div(class='col-2') #{document.metadata.journal}
+                  div(class='col-3') #{document.metadata.article_title}
 
           div(class='row')
             div(class='col-12' style='margin-top:20px;')
