--- a/views/myDocuments.pug
+++ b/views/myDocuments.pug
@@ -36,9 +36,9 @@ block content
                     div(class="hidden") #{JSON.stringify(document.metadata)}
                     if (document.metadata.manuscript_id !== "")
                       a.document-link(href=root + 'documents/' + document._id) #{document.metadata.manuscript_id}
-                    else if (document.pdf !== "")
+                    else if (document.pdf)
                       a.document-link(href=root + 'documents/' + document._id) #{document.pdf.filename}
-                    else if (document.tei !== "")
+                    else if (document.tei)
                       a.document-link(href=root + 'documents/' + document._id) #{document.tei.filename}
                     else
                       a.document-link(href=root + 'documents/' + document._id) #{formatUrl(document._id)}
